--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Thème principal sans ActionBar -->
-    <style name="Theme.Vibra" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Veyra" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Tu peux personnaliser les couleurs si tu veux -->
         <item name="android:statusBarColor">@android:color/black</item>
         <item name="android:navigationBarColor">@android:color/black</item>
